--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<title>Happy Birthday | Siddhant Sharma</title>
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css">
 	<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 	<link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
 	<br> <br> <br> <br> <br>
@@ -23,9 +23,8 @@
 		<div id="card-inside">
 			<div class="wrap">
 				<center><p class="animated infinite wobble"><b><u>Happy Birthday!</b></u></p><center>
-				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco &nbsp;<i class="em-svg em-blush"></i></p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-				 </p><p class="signed"><u>Made With </b><b> <i class="em-svg em-heart"></i></p>
+				<p>Happy Birthday, my love! Today is a special day as it marks the day you were born and brought so much happiness into this world，<i class="em-svg em-blush"></i></p>
+				<p>I wish you all the happiness and success you deserve on this special day and always. May all your dreams come true, and may you continue to shine like the star that you are. With love,</p><p class="signed"><u>Made With </b><b> <i class="em-svg em-heart"></i></p>
 			</div>
 		</div>
 		<div id="card-front">
@@ -69,7 +68,7 @@
 			<div class="card-front_inside">
 				<br> <br> <br>
 				<div class="polaroid">
-					<div class="img" style="background-image: url('https://static.vecteezy.com/system/resources/previews/000/608/881/original/heart-flat-icon-vector.jpg')"></div>
+					<div class="img" style="background-image: url('https://i.postimg.cc/DfqcFYF5/1051f43115b1e95f8abec67fccabbcb.jpg')"></div>
 				</div>
 				<div class="shadow"></div>
 			</div>
